--- a/WebMvc/Themes/LIGHTNA/Views/Shared/_JavaScript.cshtml
+++ b/WebMvc/Themes/LIGHTNA/Views/Shared/_JavaScript.cshtml
@@ -5,7 +5,7 @@
 
 <script type='text/javascript' src='@Html.ThemeUrl("/Content/js/jquery-migrate.min.js")'></script>
 <script type='text/javascript' src='@Html.ThemeUrl("/Content/js/plugins.js")'></script>
-<script type='text/javascript' src='/Scripts/bootstrap.js'></script>
+@*<script type='text/javascript' src='/Scripts/bootstrap.js'></script>*@
 
 <script type="text/javascript">
     if (jQuery(window).width() > 320) {
