--- a/WebMvc/Areas/Admin/Views/AdminMembers/Roles.cshtml
+++ b/WebMvc/Areas/Admin/Views/AdminMembers/Roles.cshtml
@@ -38,7 +38,7 @@
                             <td>
                                 @if (!it.Lock)
                                 {
-                                    <a href="@Url.Action("DeleteRole", new { id = it.Id })" class="btn-mvc">
+                                    <a href="@Url.Action("DelRole", new { id = it.Id })" class="btn-mvc">
                                         <span class="glyphicon glyphicon-remove"></span>
                                     </a>
                                 }
