--- a/WebMvc/Areas/Admin/Views/AdminProduct/CreateAttribute.cshtml
+++ b/WebMvc/Areas/Admin/Views/AdminProduct/CreateAttribute.cshtml
@@ -1,9 +1,9 @@
 ﻿@model  AdminCreateProductAttributeViewModel
 @{
-    ViewBag.Title = "Create Product Attribute";
+    ViewBag.Title = "Thêm thuộc tính sản phẩm";
 }
 
-@Html.Partial("_ProductNavButtons")
+@Html.Partial("_TopMenu", ModulConfig.ProductManage)
 
 <div class="panel">
     <div class="panel-heading">
