--- a/WebMvc/Areas/Admin/Views/AdminProduct/Edit.cshtml
+++ b/WebMvc/Areas/Admin/Views/AdminProduct/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Chỉnh sửa nhóm sản phẩm";
 }
 
-@Html.Partial("_ProductNavButtons")
+@Html.Partial("_TopMenu", ModulConfig.ProductManage)
 
 <div class="panel">
     <div class="panel-heading">
