--- a/WebMvc/Areas/Admin/Views/AdminTopic/Create.cshtml
+++ b/WebMvc/Areas/Admin/Views/AdminTopic/Create.cshtml
@@ -8,7 +8,7 @@
 
 <div class="panel">
     <div class="panel-heading">
-        <h5>Create Topic</h5>
+        <h5>@ViewBag.Title</h5>
     </div>
     <div class="panel-content">
         <div id="container">
