--- a/WebMvc/Areas/Admin/Views/Setting/CustomCode.cshtml
+++ b/WebMvc/Areas/Admin/Views/Setting/CustomCode.cshtml
@@ -10,7 +10,7 @@
     </div>
     <div class="panel-body">
         <p>Bạn có thể thêm bất kỳ mã tùy chỉnh nào (chỉ JavaScript, Html và CSS) vào đầu trang và chân trang của trang web bằng cách sử dụng các hộp bên dưới.</p>
-        <p>Mã tiêu đề sẽ xuất hiện ngay trước thẻ đóng head và mã chân trang sẽ xuất hiện ngay trước thẻ body đóng. Mã sẽ xuất hiện trên mọi trang của diễn đàn, vì vậy bạn có thể sử dụng mã này cho những thứ như Analytics.</p>
+        <p>Mã tiêu đề sẽ xuất hiện ngay trước thẻ đóng head và mã chân trang sẽ xuất hiện ngay trước thẻ body đóng. Mã sẽ xuất hiện trên mọi trang của Website, vì vậy bạn có thể sử dụng mã này cho những thứ như Analytics.</p>
         @using (Html.BeginForm())
         {
             @Html.ValidationSummary(false)
