--- a/WebMvc/Areas/Admin/Views/AdminProduct/Create.cshtml
+++ b/WebMvc/Areas/Admin/Views/AdminProduct/Create.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Thêm nhóm sản phẩm";
 }
 
-@Html.Partial("_ProductNavButtons")
+@Html.Partial("_TopMenu", ModulConfig.ProductManage))
 
 <div class="panel">
     <div class="panel-heading">
