--- a/WebMvc/Areas/Admin/Views/AdminProduct/CreateProduct.cshtml
+++ b/WebMvc/Areas/Admin/Views/AdminProduct/CreateProduct.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Thêm sản phẩm";
 }
 
-@Html.Partial("_ProductNavButtons")
+@Html.Partial("_TopMenu", ModulConfig.ProductManage)
 
 <div class="panel">
     <div class="panel-heading">
